Setup Retrofit and Dagger Hilt In the project

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+API_KEY = "25284971-8699ee3094866001522749bf7"
+kapt.use.worker.api=false
